--- a/src/components/PhotosGrid.css
+++ b/src/components/PhotosGrid.css
@@ -60,6 +60,7 @@
     margin-left: 2rem;
     padding: 2rem 0;
     text-align: left;
+    font-family: 'Bodoni Moda', serif;
 }
 
 .pageSubHeading {
