some css changes

--- a/src/components/PhotosGrid.css
+++ b/src/components/PhotosGrid.css
@@ -1,9 +1,7 @@
 .photoGrid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    width: 80%;
-    margin: 0 auto;
-    padding-top: 50px;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding-top: 20px;
 
 }
 
@@ -21,52 +19,51 @@
     display: block;
     width: 100%;
     position: absolute;
-    bottom: 5px; /*if using padding in the caption, match here */
+    bottom: 8px; /*if using padding in the caption, match here */
     left: 0;
     z-index: 2;
     margin: 0;
-    padding: 5px 0;
-    text-indent: 5px;
     color: #fff;
     /* font-weight: bold; */
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.685);
 }
 
 .imageWrap figcaption > figcaption {
-    font-family: 'Roboto', sans-serif;
-    text-align: left;
-    padding-left: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align:center;
 }
 
 .imageWrap figcaption > figcaption a {
     font-family: 'Roboto', sans-serif;
-    text-align: right;
+    text-align:center;
 }
 
 .imageWrap figcaption > figcaption a:link {
-    color: deeppink;
+    color:olivedrab;
     text-decoration: none;
 }
 
 .imageWrap figcaption > figcaption a:hover {
-    color: lemonchiffon;
-    text-decoration: none;
+    color:white;
 }
 
 .pageHeading {
     width: 100%;
-    background-color: forestgreen;
-    float: left;
-    margin-left: 2rem;
-    padding: 2rem 0;
-    text-align: left;
-    font-family: 'Bodoni Moda', serif;
+    background-color:cornsilk;
+    margin: auto;
+    padding-right: 0px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align:center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight:bolder;
+    color: rgb(91, 91, 91);
 }
 
 .pageSubHeading {
-    background-color: darkseagreen;
-    padding: 2rem 0;
-
+    background-color: rgb(91, 91, 91);
+    color: cornsilk;
+    padding: 20px 20px 20px 20px;
 }
 
 
