--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,9 @@ label {
 .pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
   border-radius: unset
 }
+
+.leaflet-container {
+  height: 400px;
+  width: 100%;
+  margin: 0 auto;
+}
